⚙️ add enable preview option for Java 17 switch pattern matching